kikker/deploys/k8s/dev-all-in-one.yaml
---
# Source: coolstore/templates/cart-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartdb
  namespace: default
  labels:
    app: cartdb
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: cartdb
---

---
# Source: coolstore/templates/cart-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: default
  labels:
    app: cart
spec:
  ports:
  - port: 80
    targetPort: 5003
    protocol: TCP
    name: http
  selector:
    app: cart
---

---
# Source: coolstore/templates/catalog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: default
  labels:
    app: catalog
spec:
  ports:
  - port: 80
    targetPort: 5002
    protocol: TCP
    name: http
  selector:
    app: catalog
---

---
# Source: coolstore/templates/idp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: idp
  namespace: default
  labels:
    app: idp
spec:
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: idp
---

---
# Source: coolstore/templates/inventory-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventorydb
  namespace: default
  labels:
    app: inventorydb
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: inventorydb
---

---
# Source: coolstore/templates/inventory-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: default
  labels:
    app: inventory
spec:
  ports:
  - port: 80
    targetPort: 5004
    protocol: TCP
    name: http
  selector:
    app: inventory
---

---
# Source: coolstore/templates/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: default
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    name: mongo
  selector:
    app: mongodb
---
---
# Source: coolstore/templates/rating-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rating
  namespace: default
  labels:
    app: rating
spec:
  ports:
  - port: 80
    targetPort: 5007
    protocol: TCP
    name: http
  selector:
    app: rating
---

---
# Source: coolstore/templates/review-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviewdb
  namespace: default
  labels:
    app: reviewdb
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: reviewdb
---

---
# Source: coolstore/templates/review-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: review
  namespace: default
  labels:
    app: review
spec:
  ports:
  - port: 80
    targetPort: 5006
    protocol: TCP
    name: http
  selector:
    app: review
---

---
# Source: coolstore/templates/spa-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa
  namespace: default
  labels:
    app: spa
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spa
---

---
# Source: coolstore/templates/cart-db-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cartdb-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cartdb
        version: v1
    spec:
      containers:
      - name: cartdb
        image: vndg/cs-mysqldb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
---

---
# Source: coolstore/templates/cart-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cart-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cart
        version: v1
    spec:
      containers:
      - name: cart
        image: vndg/cs-cart-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5003
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5003
          initialDelaySeconds: 10
          periodSeconds: 5
---

---
# Source: coolstore/templates/catalog-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: catalog
        version: v1
    spec:
      containers:
      - name: catalog
        image: vndg/cs-catalog-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
---

---
# Source: coolstore/templates/idp-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: idp-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: idp
        version: v1
    spec:
      containers:
      - name: idp
        image: vndg/cs-idp-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 5001
---

---
# Source: coolstore/templates/inventory-db-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inventorydb-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventorydb
        version: v1
    spec:
      containers:
      - name: inventorydb
        image: vndg/cs-mysqldb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
---

---
# Source: coolstore/templates/inventory-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inventory-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
        version: v1
    spec:
      containers:
      - name: inventory
        image: vndg/cs-inventory-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5004
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5004
          initialDelaySeconds: 10
          periodSeconds: 5
---

---
# Source: coolstore/templates/mongodb-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongodb-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
        version: v1
    spec:
      containers:
      - name: mongodb 
        image: bitnami/mongodb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
---
---
# Source: coolstore/templates/rating-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rating-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rating
        version: v1
    spec:
      containers:
      - name: rating
        image: vndg/cs-rating-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5007
---

---
# Source: coolstore/templates/review-db-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviewdb-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviewdb
        version: v1
    spec:
      containers:
      - name: reviewdb
        image: vndg/cs-mysqldb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
---

---
# Source: coolstore/templates/review-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: review-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: review
        version: v1
    spec:
      containers:
      - name: review
        image: vndg/cs-review-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5006
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5006
          initialDelaySeconds: 10
          periodSeconds: 5
---

---
# Source: coolstore/templates/spa-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spa-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: spa
        version: v1
    spec:
      containers:
      - name: spa
        image: vndg/cs-spa:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
---
# Source: coolstore/templates/cs-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cs-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - coolstore.local
    - api.coolstore.local
    - id.coolstore.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-vs
spec:
  hosts:
  - coolstore.local
  gateways:
  - cs-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: spa
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: id-vs
spec:
  hosts:
  - id.coolstore.local
  gateways:
  - cs-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: idp
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-vs
spec:
  hosts:
  - api.coolstore.local
  gateways:
  - cs-gateway
  http:
  - match:
    - uri:
        prefix: /inventory/
    route:
    - destination:
        host: inventory
        port:
          number: 80
  - match:
    - uri:
        prefix: /catalog/
    route:
    - destination:
        host: catalog
        port:
          number: 80
  - match:
    - uri:
        prefix: /rating/
    route:
    - destination:
        host: rating
        port:
          number: 80
  - match:
    - uri:
        prefix: /cart/
    route:
    - destination:
        host: cart
        port:
          number: 80
  - match:
    - uri:
        prefix: /review/
    route:
    - destination:
        host: review
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: id-vs
spec:
  hosts:
  - id.coolstore.local
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: idp-http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-vs
spec:
  hosts:
  - api.coolstore.local
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: api-http
    protocol: HTTP
  resolution: DNS
---
# Source: coolstore/templates/nginx-ingress.yaml
